--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @version 0.0.2 */
+/* @version 0.0.3 */
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -12,7 +12,7 @@ input[type='number'] {
 }
 
 body {
-  background-color: 'red';
+  background-color: #aaaaaa;
   color: black;
 }
 
@@ -26,7 +26,7 @@ body {
 }
 
 .introInstructions {
-  font-size: 30px;
+  font-size: 90px;
 }
 .textbutton {
   font-size: 24px;
