--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* @version 0.0.4 */
+
+/* Hide number input arrows */
+/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
