--- a/style.css
+++ b/style.css
@@ -45,5 +45,7 @@ body {
 }
 
 .jspsych-survey-likert-opts {
-  font-size: 24px !important;
+  font-size: 14px !important;
+  width: 16px !important;
+  height: 16px !important;
 }
